# aerlon_rust_archived

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  askama.toml  package.json  pnpm-lock.yaml  sample.env  webpack.config.js
admin/: admin.html  admin_login.html  admin_new.html  admin_update.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1678148561848.mjs
admin/src/api/: admin.ts  types.ts
admin/src/styles/: admin-login.scss  admin.scss
admin/src/utils/: dateFormater.ts
admin/src/views/: Admin.tsx  Login.tsx  New.tsx  Update.tsx
code_themes/: eac.tmTheme
public/js/: admin.bundle.js  benchmarks.bundle.js  rng.bundle.js  shared.bundle.js  themes.js
public/js/compiled/: admin-compiled.js  admin_login-compiled.js  navigation-compiled.js
sass/: _sizing.scss  _variables.scss  main.scss
sass/components/: _card.scss  _header.scss  _navbar.scss  _readme.scss  _sidebar.scss  _themer.scss  _wip.scss
sass/layouts/: _about.scss  _admin-login.scss  _admin.scss  _markdown.scss
schemas/: metric.sql  post.sql
source_assets/js/: compiler.mjs
source_assets/js/scripts/: navigation.js  timeThemer.js
source_assets/sass/: _fonts.scss  _mixins.scss  _sizing.scss  _variables.scss  main.scss
source_assets/sass/components/: _404.scss  _card.scss  _navbar.scss  _readme.scss  _sidebar.scss
source_assets/sass/layouts/: _admin-login.scss  _benchmarks.scss  _blog.scss  (+3 more)
src/: main.rs
src/database/: mod.rs  postgres.rs  redis.rs
src/errors/: mod.rs
src/generator/: mod.rs
src/handlers/: admin.rs  admin_api.rs  blog.rs  category.rs  index.rs  mod.rs  rng.rs  series.rs
src/middlewares/: admin.rs  metrics.rs  mod.rs  test.rs
src/models/: mod.rs  post.rs
src/services/: mod.rs
src/utilities/: jwt.rs  mod.rs  templates.rs
templates/: about.html.j2  admin.html.j2  admin_login.html.j2  benchmarks.html.j2  blog.html.j2  blog_$post.html.j2  category_$category.html.j2  error.html.j2  index.html.j2  index_$post.html.j2  readme.html.j2  rng.html.j2  series.html.j2  series_$series.html.j2  station.html.j2
templates/includes/: header.html.j2  navbar.html.j2  sidebar.html.j2  themer.html.j2
templates/layouts/: app.html.j2  master.html.j2  station.html.j2
vite/: admin.html  package.json  pnpm-lock.yaml  rng.html  vite.config.ts  vite.config.ts.timestamp-1680737842860.mjs
web/views/: admin.aska  admin_login.aska  admin_login.html.j2  benchmarks.aska  benchmarks.html.j2  blog.aska  blog.html.j2  blog_$post.aska  category_$category.aska  category_$category.html.j2  error.aska  error.html.j2  readme.aska  readme.html.j2  rng.aska  rng.html.j2  series.aska  series.html.j2  series_$series.aska  series_$series.html.j2  station.aska
webpack/: admin.tsx  benchmarks.tsx
webpack/Login/: Main.tsx
webpack/api/: types.ts
webpack/scripts/: navbar.js  navigation.js  sidebar.js  timeThemer.js
(+58 files in other folders)
