[package]
name = "ericarthurc"
version = "0.4.8"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.16.0"
cookie = "0.17"
dotenvy = "0.15"
futures = "0.3.25"
http = "0.2"
http-body = "0.4"
jsonwebtoken = "8.1.1"
once_cell = "1.16.0"
openssl = "0.10.41"
redis = { version = "0.22", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono" ] }
syntect = "5"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.3", features = ["full"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
